--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -58,6 +58,9 @@
         <div class="card-footer text-center">
             <div class="small"><a href="{% url 'authapp:register' %}">Нужен аккаунт? Зарегистрируйся!</a></div>
         </div>        
+        <div class="card-footer text-center">
+            <div class="small"><a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">Войти через вк</a></div>
+        </div>  
     </div>
 </div>
 {% endblock %}
