--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -56,6 +56,7 @@
                         {{ form.email }}
                     </div>
                 </div>
+                {{ profile_form.as_p }}
                 <div class="form-row">
                     {#                        <div class="col-lg-6">#}
                     {#                            <label class="small mb-1" for="inputBirthday">День рождения</label>#}
@@ -66,6 +67,7 @@
                         <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                     </div>
                 </div>
+                
             </form>
         </div>
        <div class="col-lg-5">
