--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -40,12 +40,39 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
                     </li>
-                    {% if user.is_authenticated %}
+                    <!-- {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'authapp:profile' %}">{{ user.username }}
                             <i class="fas fa-user-circle"></i>
                         </a>
+                    </li> -->
+
+
+                    {% if user.is_authenticated %}            
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown">
+                                {{ user.username|default:'Пользователь' }}
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item my-item-order">
+                                    <a class="nav-link my-link-order" href="{% url 'authapp:profile' %}" style="color:black; text-align: center;">
+                                        Профиль
+                                    </a>
+                                </li>
+                                <li class="nav-item my-item-order">
+                                    <a class="nav-link my-link-order" href="{% url 'order:orders' %}" style="color:black; text-align: center;">
+                                        Заказы
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
+                    {% endif %}
+
+
+
                     {% if user.is_staff or user.is_superuser %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'admin_staff:index' %}">
@@ -53,6 +80,9 @@
                             </a>
                         </li>
                     {% endif %}
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="{% url 'order:orders' %}">Заказы</a>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'authapp:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                     </li>
@@ -72,15 +102,17 @@
 
     {% block footer %}{% endblock %}
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    {% block js %}
+        <!-- Bootstrap core JavaScript -->
+        <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
-    <!-- FontAwesome script -->
-    <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
+        <!-- FontAwesome script -->
+        <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 
-    <!-- Basket script -->
-    <script src="{% static 'js/basket.js' %}" crossorigin="anonymous"></script>
+        <!-- Basket script -->
+        <script src="{% static 'js/basket.js' %}" crossorigin="anonymous"></script>
+    {% endblock %}    
 
 </body>
 
