--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -40,14 +40,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
                     </li>
-                    <!-- {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'authapp:profile' %}">{{ user.username }}
-                            <i class="fas fa-user-circle"></i>
-                        </a>
-                    </li> -->
-
-
                     {% if user.is_authenticated %}            
                     <li class="nav-item">
                         <div class="dropdown">
@@ -70,9 +62,6 @@
                         </div>
                     </li>
                     {% endif %}
-
-
-
                     {% if user.is_staff or user.is_superuser %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'admin_staff:index' %}">
@@ -80,9 +69,7 @@
                             </a>
                         </li>
                     {% endif %}
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="{% url 'order:orders' %}">Заказы</a>
-                    </li> -->
+                    {% if user.is_authenticated %}  
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'authapp:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                     </li>
