--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -16,7 +16,7 @@
    {% endblock %}
    {% block js %}
         <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-        <!-- <script src="{% static 'js/orders_scripts.js' %}"></script> -->
+        <script src="{% static 'js/orders_script.js' %}"></script>
 
         <!-- Bootstrap core JavaScript -->
         <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
