--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -15,8 +15,10 @@
        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
    {% endblock %}
    {% block js %}
-        <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+        <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>        
         <script src="{% static 'js/orders_script.js' %}"></script>
+        <script src="{% static 'js/jquery.formset.js' %}"></script>
+        
 
         <!-- Bootstrap core JavaScript -->
         <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
